2003/07/23 16:46 muppetman

	* README, Makefile.PL: update required versionf of Gtk2 and Glib to
	ensure that the gchar_own typemap (introduced in 0.90) is available.

2003/07/22 17:31 rwmcfa1

	* xs/Gtk2.pm: much discussed immproved handling of the create_item via
	hash handling, now complains on bad keys. thanks to Joe Smith and Brett 
	Kosinski for their input.

2003/07/22 16:41 muppetman

	* xs/GtkTreeModel.xs: more _ornulls

	* AUTHORS: add thierry, who should've been in a couple weeks ago

2003/07/21 07:36 rwmcfa1

	* xs/GtkTreeModel.xs: Gtk2::TreeModel->get now returns an array of all
	of the columns when no column id's are passed, documented in api.pod,
	shouldn't affect anything normal documented api

2003/07/18 12:00 muppetman

	* xs/GtkTreeSortable.xs: implemented the missing sort callbacks.

	* Gtk2.pm, README, Makefile.PL, META.yml: bump version to 0.90 for
	first beta series release.  require at least Glib 0.26.

2003/07/17 11:35 muppetman

	* xs/GdkX11.xs: a few x11-backend-specific functions from gdkx.h,
	only used on the X11 backend.

	* xs/GdkRgb.xs: hackish implementations for some rarely-used but
	handy gdk-rgb stuff.

2003/07/16 10:04 muppetman

	* xs/GtkTreeModel.xs, xs/GdkScreen.xs, xs/GtkWidget.xs: more
	instances of returning '_own'ed wrappers for stack items.
	coverted all of them to '_copy's.

2003/07/15 20:28 rwmcfa1

	* t/18.GtkNotebook.t: almost, if not, complete testing of 
	Gtk2::Notebook.

2003/07/15 08:29 rwmcfa1

	* xs/GtkNotebook.xs: allowed NULL's, and defaulted to them, as 
	appropriate for both parameters and return values in a lot of places,
	one of which Thierry Vignaud pointed out.

2003/07/14 22:30 muppetman

	* xs/GtkTreeModel.xs: bugfix, can't _own_ornull something that wasn't
	dynamically allocated.

2003/07/14 20:44 rwmcfa1

	* t/00.Gtk2.t: more thorough testing, init_add, quit_add, 
	quit_add_remove.

	* t/01.GtkWindow.t: much more thorough testing, but not complete. 
	general re-org.
