@@ -1,3 +1,11 @@
+2003/07/24 00:56 pcg
+
+	* gtk2perl.h, xs/GtkPlug.xs, xs/GtkSocket.xs: don't build these
+        for the win32 backend. It defines the macros, but doesn't actually
+        provide them.
+        * xs/GtkRadioButton.xs: remove extra aliases (saves memory and
+        avoids extra symbols).
+
 2003/07/23 16:46 muppetman
 
 	* README, Makefile.PL: update required versionf of Gtk2 and Glib to
@@ -71,8 +79,8 @@
 	* xs/Gtk2.xs: implemented first pass at init_add, quit_add, and 
 	quit_add_remove.
 
-	* xs/GtkWindow.xs: title defaults to NULL is set_title. get_icon is 
-	allowed (and does) reuturn NULL when there are no icons associated with
+	* xs/GtkWindow.xs: title defaults to NULL in set_title. get_icon is 
+	allowed (and does) return NULL when there are no icons associated with
 	the window, api doc doesn't mention this. window_list_toplevels 
 	implemented
 
